--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,35 @@
 {
   "name": "forumone/wp-cfm",
   "description": "Manage and deploy WordPress configuration changes.",
-  "keywords": ["WordPress", "plugin", "configuration"],
+  "type": "wordpress-plugin",
+  "license": "GPL-2.0-only",
+  "keywords": [
+    "WordPress",
+    "plugin",
+    "configuration"
+  ],
   "authors":[
     {
       "name": "Forum One",
+      "email": "wordpress@forumone.com",
       "homepage": "https://forumone.com"
     },
     {
       "name": "Matt Gibbs",
       "homepage": "https://facetwp.com/"
+    },
+    {
+      "name": "Tim Nolte",
+      "homepage": "https://github.com/timnolte"
+    },
+		{
+			"name": "Deanna Steers",
+			"email": "dsteers@forumone.com"
     }
   ],
-  "type": "wordpress-plugin",
-  "license": "GPL-2.0-only",
+  "homepage": "https://github.com/forumone/wp-cfm-dist",
   "support": {
-    "issues": "https://github.com/forumone/wp-cfm/issues"
+    "issues": "https://github.com/forumone/wp-cfm-dist/issues"
   },
   "repositories": [
     {
@@ -23,6 +37,20 @@
       "url": "https://wpackagist.org"
     }
   ],
+  "config": {
+    "platform": {
+      "php": "8.1"
+    },
+    "optimize-autoloader": true,
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "phpstan/extension-installer": true,
+      "cweagans/composer-patches": true,
+      "johnpbloch/wordpress-core-installer": true,
+      "composer/installers": true
+    }
+  },
   "require": {
     "php": ">=7.4",
     "cweagans/composer-patches": "^1.7",
@@ -46,19 +74,14 @@
     "szepeviktor/phpstan-wordpress": "^1.3",
     "wp-coding-standards/wpcs": "^3.0.0",
     "wp-phpunit/wp-phpunit": "~6.4.0",
+    "wpackagist-plugin/debug-bar": "*",
+    "wpackagist-plugin/debug-bar-actions-and-filters-addon": "*",
+    "wpackagist-plugin/display-environment-type": "*",
+    "wpackagist-plugin/health-check": "*",
+    "wpackagist-plugin/query-monitor": "*",
+    "wpackagist-plugin/transients-manager": "*",
     "wpackagist-theme/twentytwentythree": "*",
     "yoast/phpunit-polyfills": "^2.0"
-  },
-  "config": {
-    "sort-packages": true,
-    "optimize-autoloader": true,
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
-      "phpstan/extension-installer": true,
-      "cweagans/composer-patches": true,
-      "johnpbloch/wordpress-core-installer": true,
-      "composer/installers": true
-    }
   },
   "scripts": {
     "install-codestandards": [
